# django-glide

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
django_glide/: config.py
django_glide/templates/glide/: carousel.html
django_glide/templates/swiper/: carousel.html
django_glide/templatetags/: glide_tags.py
glide/: config.py
glide/templates/: template.html
glide/templatetags/: glide_tags.py  tags.py
tests/: settings.py  test_config.py  test_tag.py
tests/templates/testapp/: custom_carousel.html  custom_slide.html
