[metadata]
name = django-glide
version = 1.0.0
description = Easily add carousels to your django app
long_description_content_type = text/markdown
long_description = file: README.md
author = Pierre Guillemot
author_email = pierre@kalvad.com
url= https://github.com/KalvadTech/django-glide/
license = MIT
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
packages = django_glide
include_package_data = True
python_requires = >=3
install_requires =
    Django>=3

[options.extras_require]
dev =
    build==1.4.0
    ruff==0.14.14
    tox==4.34.1
    ty==0.0.14
